<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_corners_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimens_50"
        android:layout_height="@dimen/dimens_50"
        android:layout_marginTop="@dimen/dimens_30"
        android:layout_marginEnd="@dimen/dimens_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/txt_medal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_15"
        android:layout_marginTop="@dimen/dimens_100"
        android:layout_marginEnd="@dimen/dimens_15"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_size_25"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure"
            android:layout_marginHorizontal="5dp"
            android:layout_gravity="center|bottom"
            android:textColor="@color/gray"
            android:textSize= "@dimen/font_size_25"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/question_mark"
            android:layout_gravity="center|bottom"
            android:textColor="@color/gray"
            android:textSize="@dimen/font_size_50"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_50"
        android:layout_marginBottom="@dimen/dimens_50"
        android:background="@drawable/background_button_yes"
        android:gravity="center_horizontal"
        android:paddingHorizontal="@dimen/dimens_50"
        android:paddingVertical="@dimen/dimens_8"
        android:text="@string/yes"
        android:textColor="@color/orange"
        android:textSize="@dimen/font_size_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_medal_title" />

</androidx.constraintlayout.widget.ConstraintLayout>